fix overlay issue on mobile portrait

--- a/assets/scss/blocks.scss
+++ b/assets/scss/blocks.scss
@@ -254,6 +254,9 @@ SLIDER STYLING
 
   .overlay-slider {
     @include banner-overlay;
+    @include mobiles-portrait {
+      background: $light;
+    }
   }
 }
 
